| Bug #3296 | SET character_set_results=NULL crashes server | ||
|---|---|---|---|
| Submitted: | 25 Mar 2004 17:36 | Modified: | 31 Mar 2004 1:17 |
| Reporter: | Paul DuBois | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 4.1.2 | OS: | Linux (Linux) |
| Assigned to: | Bugs System | Target Version: | |
[25 Mar 2004 17:36]
Paul DuBois
[25 Mar 2004 18:36]
Paul DuBois
Additional information: The crash is specific to the use of SELECT @@var_name form. Retrieving the value using SHOW VARIABLES works fine: mysql> set character_set_results=null; Query OK, 0 rows affected (0.00 sec) mysql> show variables like 'character\_set\_results'; +-----------------------+-------+ | Variable_name | Value | +-----------------------+-------+ | character_set_results | NULL | +-----------------------+-------+ 1 row in set (0.00 sec)
[25 Mar 2004 19:23]
Miguel Solorzano
Paul I tested on Windows and Suse 9.0 with a server built with 1 day older BK 4.1 tree without to crash.
[30 Mar 2004 11:28]
Sinisa Milivojevic
Sorry Paul, But works for me fine too.
[30 Mar 2004 11:49]
Paul DuBois
Sinisa, What kind of system did you try it on? I already indicated below that it happens only on some systems. I'm disappointed you declare it not a bug, given that it's a trivial way to crash the server. If you tell me what information would be helpful, I'll try to provide it.
[30 Mar 2004 12:02]
Sinisa Milivojevic
This was tested on both Linux and Windows.
[30 Mar 2004 14:44]
Oleksandr Byelkin
ChangeSet 1.1746 04/03/30 23:38:56 bell@sanja.is.com.ua +3 -0 null processing for character_set_results (BUG#3296)
[31 Mar 2004 1:17]
Oleksandr Byelkin
Thank you for bugreport. Patch for this bug is pushed to our internal source repository and will be present in next release of server 4.1
