null processing for character_set_results (BUG#3296)